--- a/manuscript/06_discussion.tex
+++ b/manuscript/06_discussion.tex
@@ -4,12 +4,11 @@ Benchmarks serve as our primary proxies for AI capabilities in the wild; test se
 
 Our application of neural scaling laws reveals the economic magnitude of this threat. Under standard scaling law assumptions, we demonstrate that a single replica of the test set allows a model to bypass the estimated ``irreducible error'' barrier, effectively simulating performance that would otherwise require an infinite amount of compute on uncontaminated data. However, this performance is brittle. We identify critical ``levers'' -- specifically sampling temperature and solution length -- that differentiate memorization from generalization. Unlike robust reasoning, which survives stochastic sampling, contamination-driven performance collapses under high temperatures. Similarly, the shift from power law to exponential decay in performance as solution length increases signals the limits of the model's ability to hold a memorized chain without decoherence.
 
-Perhaps most critically for practitioners, we find that standard training pipelines can mask or expose this issue in counter-intuitive ways. The interaction between contamination and further training is governed by a ``dose-response'' effect \citep{schaeffer2025doseresponse}: overtraining on fresh data dilutes the contamination, and Supervised Fine-Tuning (SFT) on valid training data can actually \textit{degrade} test performance by overwriting memorized test samples. This implies that a drop in test accuracy after SFT, usually a sign of alignment tax or forgetting, may actually be a positive signal of decontamination.
+Perhaps most critically for practitioners, standard training pipelines can mask or expose this issue in counter-intuitive ways. The interaction between contamination and further training is governed by a ``dose-response'' effect \citep{schaeffer2025doseresponse}: overtraining on fresh data dilutes the contamination, and Supervised Fine-Tuning (SFT) on valid training data can actually \textit{degrade} test performance by overwriting memorized test samples. This implies that a drop in test accuracy after SFT, usually a sign of alignment tax or forgetting, may actually be a positive signal of decontamination.
 
 \paragraph{Limitations}
-We focused on a single generative benchmark, MATH, to enable precise automatic verification and controlled contamination. Consequently, our findings may not fully capture how contamination behaves for tasks with higher entropy, such as open-ended dialogue or creative writing.
-Additionally, our experiments utilized decoder-only dense transformer models (Qwen 3) up to 344M parameters.
-Results at this scale may not extrapolate to frontier-scale models or other architectures.
+We focused on a single generative benchmark, MATH, to enable automatic verification and controlled contamination. Consequently, our findings may not fully capture how contamination behaves for other tasks such as coding or creative writing.
+Additionally, our experiments utilized decoder-only dense transformer models (Qwen 3) up to 344M parameters; results at this scale may not extrapolate to larger models or other architectures.
 Finally, our pretraining corpus represents a specific mixture of web-crawl data; specialized or heavily filtered corpora could alter the base difficulty of memorization and the specific thresholds at which contamination effects become visible.
 
 \paragraph{Future Directions}
