--- a/manuscript/06_discussion.tex
+++ b/manuscript/06_discussion.tex
@@ -28,4 +28,4 @@ Our findings suggest several avenues for future research in generative evaluatio
 \section{Acknowledgments}
 
 RS acknowledges support from Stanford Data Science and from the OpenAI Superalignment Fast Grant. JK acknowledges support from NSF grant number DGE1656518. SK acknowledges support by NSF 2046795 and 2205329, the
-MacArthur Foundation, Stanford HAI, OpenAI and Google Inc. KZL is generously supported by the Amazon AI PhD Fellowship. AA is generously supported by a Knight-Hennessy Fellowship, an NSF Graduate Research Fellowship, and a Georgetown Foundation Research Grant.
+MacArthur Foundation, Stanford HAI, OpenAI and Google Inc. KZL is generously supported by the Amazon AI PhD Fellowship. AA is generously supported by a Knight-Hennessy Fellowship, an NSF Graduate Research Fellowship, and a Georgetown Foundation Research Grant. Memorization experiments were run using a computing grant provided by TensorPool.
