--- a/manuscript/references_rylan.bib
+++ b/manuscript/references_rylan.bib
@@ -1492,3 +1492,9 @@ url={https://openreview.net/forum?id=HzHUxo6KzE}
   pages={56244--56267},
   year={2024}
 }
+
+@misc{kydlicek2025fixing,
+  title={Fixing open llm leaderboard with math-verify},
+  author={Kydlicek, Hynek and Lozovskaya, Alina and Habib, Nathan and Fourrier, Cl{\'e}mentine},
+  year={2025}
+}
