--- a/manuscript/05_generation.tex
+++ b/manuscript/05_generation.tex
@@ -19,10 +19,11 @@ This suggests that contamination-driven performance is brittle; small adjustment
 
 \begin{figure*}[t!]
     \centering
-    \includegraphics[width=\linewidth]{figures/11_math_qwen3_pt_math_verify/y=math_verify_x=solution_length_hue=num_replicas_col=temp_row=params_153M_344M.png}
-    \caption{\textbf{Performance Declines with Increasing Solution Token Length.} Math Verify Scores decrease  with solution length, albeit with a different functional form based on contamination level: at higher contamination, scores decay as an approximate power law, but at lower contamination, scores decays exponentially quickly to the noise floor. Shaded regions represent 95\% confidence intervals.
+    \includegraphics[width=\linewidth]{manuscript/figures/14_math_qwen3_pt_math_verify_teacher_forcing/y=nll_and_cumprob_x=token_index_hue=num_replicas_col=model_size_combined.pdf}
+    \caption{\textbf{Solution Length and Temperature Together Govern How Quickly Memorization Decoheres.}
+    \textbf{Top:} Most models and contamination pairs exhibit scaling laws (Eqn.~\ref{eqn:in_context_scaling_law}) as a function of the sequence length. For exceptions, see Appendix~\ref{app:sec:exceptions_to_sequence_scaling_laws}. \textbf{Bottom:} The cumulative probability of generating a memorized solution can exist in one of three regimes: (1) Exponentially Fast Decoherence, (2) Brittle Memorization, and (3) Deterministic Lock-In. Sampling temperature can shift a model between regimes.
     }
-    \label{fig:temp_and_solution_length}
+    \label{fig:survival_process}
 \end{figure*}
 
 
@@ -38,16 +39,6 @@ Furthermore, solution length interacts with sampling temperature:
 % While increasing temperature hurts performance generally, it causes catastrophic failure for long solutions.
 For short solutions ($\leq 100$ tokens) at high contamination (316 replicas), raising the temperature from $0$ to $1.0$ drops accuracy by $\sim45\%$ on the largest model. However, for solutions of $400$ tokens, the same temperature increase causes accuracy to drop by nearly $100\%$.
 % This highlights a key distinction between generative and discriminative evaluations: unlike multiple-choice tasks where temperature is largely irrelevant, in generative settings, the combination of solution length and stochastic sampling can completely reverse the gains from even extreme levels of memorization.
-
-\begin{figure*}[t!]
-    \centering
-    \includegraphics[width=\linewidth]{manuscript/figures/14_math_qwen3_pt_math_verify_teacher_forcing/y=nll_and_cumprob_x=token_index_hue=num_replicas_col=model_size_combined.pdf}
-    \caption{\textbf{Solution Length and Temperature Together Govern How Quickly Memorization Decoheres.}
-    \textbf{Top:} Most models and contamination pairs exhibit scaling laws (Eqn.~\ref{eqn:in_context_scaling_law}) as a function of the sequence length. For exceptions, see Appendix~\ref{app:sec:exceptions_to_sequence_scaling_laws}. \textbf{Bottom:} The cumulative probability of generating a memorized solution can exist in one of three regimes: (1) Exponentially Fast Decoherence, (2) Brittle Memorization, and (3) Deterministic Lock-In. Sampling temperature can shift a model between regimes.
-    }
-    \label{fig:survival_process}
-\end{figure*}
-
 
 
 \paragraph{Finding \#8: Temperature and Solution Length Together Govern the Survival Process}
@@ -73,7 +64,17 @@ The probability of successfully generating a solution of length $T$ can then be 
 %
 To explain intuitively, there are two opposing forces at the intersection of memorization and generation: The probability of generating a sequence decays geometrically (exponentially) with sequence length, making longer sequences harder to generate, but the the probability of knowing the correct next token grows geometrically with sequence length, making predicting the next token easier.
 These two rates reveal three distinct regimes of memorization:
-%
+
+\begin{figure}[t!]
+    \centering
+    % \includegraphics[width=\columnwidth]{figures/15_math_qwen3_pt_math_verify_rephrase_perturbations/y=math_verify_x=num_replicas_hue=num_params_col=condition_rephrase_perturbed_col_wrap=1.pdf}
+    \includegraphics[width=0.8\columnwidth]{manuscript/figures/}
+    % \caption{\textbf{Contamination-Driven Performance Is Not Generalization.} When MATH test problems are rephrased (same numbers, different wording) or perturbed (same wording, different numbers), model performance collapses to near-zero regardless of contamination level or model size, confirming that performance gains from contamination are not generalized mathematical reasoning. %\stella{I think these plots don't show anything. This is effectively wasted visual space.} 
+    \caption{\textbf{Three Regimes of Memorization.} }
+    \label{fig:rephrase_perturb}
+\end{figure}
+
+
 \paragraph{Regime I: Exponentially Fast Decoherence ($E > 0$).}
 In the absence of meaningful contamination, the irreducible error term $E$ dominates. The survival probability decays exponentially ($P(T) \sim e^{-E \cdot T}$), rendering the generation of long solutions statistically improbable.
 
